# mcp-assistant

./: .cache  .gitignore  action.py  asr.py  asr_deepgram.py  client.py  gemini.py  input.py  main.py  mcp-server.py  mcp_server.py  notes.md  pyproject.toml  spotify.py  test.py  tts.py  tts_camb.py  tts_deepgram.py  tts_google.py  tts_gtts.py  tts_piper.py  weather.py
