[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.66.0",
    "deepgram-sdk>=4.8.1",
    "google-genai>=1.33.0",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "protobuf>=6.32.0",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.1.1",
    "realtimestt>=0.3.104",
    "simpleaudio>=1.0.4",
    "speechrecognition>=3.14.3",
    "spotipy>=2.25.1",
]
