[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.66.0",
    "deepgram-sdk>=4.8.1",
    "faiss-cpu>=1.12.0",
    "faster-whisper>=1.1.1",
    "google-genai>=1.33.0",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "keyboard>=0.13.5",
    "langchain>=0.3.27",
    "librosa>=0.11.0",
    "mcp[cli]>=1.13.1",
    "mp3play>=0.1.15",
    "numpy>=2.2.6",
    "nvidia-cublas-cu12>=12.6.4.1",
    "nvidia-cudnn-cu12>=9.10.2.21",
    "openai-whisper>=20250625",
    "piper-tts>=1.3.0",
    "protobuf>=6.32.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pydub>=0.25.1",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.1.1",
    "realtimestt>=0.3.104",
    "scipy>=1.15.2",
    "sentence-transformers>=5.1.1",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.2",
    "speechrecognition>=3.14.3",
    "spotipy>=2.25.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
    "webrtcvad>=2.0.10",
    "whisper>=1.1.10",
]
